change DWA parameter and add obstacle form-model and other

--- a/src/robot_room/CMakeLists.txt
+++ b/src/robot_room/CMakeLists.txt
@@ -80,9 +80,9 @@ include
 #  add_executable(modelplugin  src/modelplugin.cpp  src/ModelSizePlugin.cpp  )
 #  target_link_libraries( modelplugin ${catkin_LIBRARIES})
 #  install(TARGETS modelplugin   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION} )
-#  add_executable(DWA_main_1  src/DWA_main_1.cpp  src/DWA.cpp src/KinematicModel.cpp )
-#  target_link_libraries( DWA_main_1 ${catkin_LIBRARIES})
-#  install(TARGETS DWA_main_1  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION} )
+ add_executable(DWA_main_1  src/DWA_main_1.cpp  src/DWA.cpp src/KinematicModel.cpp )
+ target_link_libraries( DWA_main_1 ${catkin_LIBRARIES})
+ install(TARGETS DWA_main_1  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION} )
 # add_executable(DWA_main  src/DWA_main.cpp  src/DWA.cpp src/KinematicModel.cpp )
 #add_executable(main_1  src/main_1.cpp  src/KinematicModel.cpp)
 ## Specify libraries to link a library or executable target against
